Change the name of a button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             architecture, nature and a deep historical context.
           </h4>
           <div class="button-box">
-            <a class="book" href="https://wa.me/message/C23SFYIKLTP2A1" target="_blank">Contact</a>
+            <a class="book" href="https://wa.me/message/C23SFYIKLTP2A1" target="_blank">Contact us</a>
           </div>
         </section>
       </div>
